welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:4: error: '=>' expected but 'case' found.
	case (a,b) if (b=10) {return true}
        ^